# dip

./: Cargo.toml
examples/cli/config/: main.rs
plugins/bundle/: Cargo.toml
plugins/bundle/src/: config.rs
plugins/bundle/src/tool/: dotfiles.rs  homebrew.rs  script.rs
plugins/bundle/src/tool/vm/: nodejs.rs  tailwindcss.rs
plugins/config/src/: lib.rs
plugins/core/src/: lib.rs
plugins/macro/src/: action_parser.rs  cli.rs  subcommand.rs  ui_state.rs
plugins/ui/desktop/: Cargo.toml
plugins/ui/desktop/src/: plugin.rs  system.rs  window.rs
plugins/utils/: Cargo.toml
plugins/utils/src/: lib.rs
src/: cli.rs  config.rs  lib.rs  main.rs
src/cli/: action.rs
